최적화 끝